--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "TOKEN": "",
+  "TOKEN": "OTI0NTk2MTU3MjYxNDE4NTA2.Ycg3Rg.-kXjZBrnCzyntWC05-jhi8Ohq1o",
   "CHANNEL_ID": ["UC8PayvChcsfei4dG5MhaexA"],
-  "SERVER_CHANNEL_ID": "735118044145123348"
+  "SERVER_CHANNEL_ID": "919468030830989352"
 }
